--- a/src/css/main.css
+++ b/src/css/main.css
@@ -160,8 +160,8 @@ footer img{
         gap: 15px;
         }
     
-    .textos{
-        border: 0 10px 0 10px;
+   .sobre{
+        padding: 0 40px 0 40px;
     }
     
     .social-media a{
@@ -190,8 +190,8 @@ footer img{
         width: 100%;
     }
     
-    .textos{
-        border: 0 10px 0 10px;
+    .sobre{
+        padding: 0 40px 0 40px;
     }
 
     .social-media{
