--- a/src/css/main.css
+++ b/src/css/main.css
@@ -107,6 +107,7 @@ hr{
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    padding-top: 10px;
 }
 
 .social-media a{
@@ -169,11 +170,13 @@ footer img{
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-top: 10px;
         gap: 15px;
         }
     
     .social-media a{
         width: 50vh;
+        
     }
 
     footer{
@@ -215,6 +218,7 @@ footer img{
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-top: 10px;
         gap: 15px;
         }
     
