--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,7 @@
 /*font-family: 'Alfa Slab One', cursive;*/
 
 body{
-    background-color: #121212;
+    background-color: #0e0f0f;
     font-family: 'Patua One', cursive;
     height: 100%;
 }
@@ -17,7 +17,6 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 200px 0 0 0;
 }
 
 
